--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@ function create() {
     timer = game.time.create(2000, false);
     timer.add(1500,updateText);
     timer.start();
+
+    $.get("http://kusuk.in/javascript_api/get_progress",{"user_id":1,"course_id":1,
+      function(data){
+        console.log(data)
+      })
 }
 
 
