--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
         <script src="phaser.min.js"></script>
+        <script src="jquery-1.12.0.min.js"></script>
     </head>
     <body>
 
